# QReversi

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  QReversi.pro  README.md  main.cc
core/: battle.cc  battle.h  gameplay.cc  gameplay.h
core/players/: ai.cc  ai.h  human.cc  human.h  networkplayer.cc  networkplayer.h  virtualplayer.cc  virtualplayer.h
ui/: mainwindow.cc  mainwindow.h  newgamedialog.cc  newgamedialog.h  newgamedialog.ui  newnetworkgamedialog.cc  newnetworkgamedialog.h  newnetworkgamedialog.ui
ui/checkerboard/: boardgird.cc  boardgird.h  boardgrid.cc  boardgrid.h  boardlayout.cc  boardlayout.h  checkerboardwidget.cc  checkerboardwidget.h
